# candy

./: CMakeLists.txt  candy.cfg  candy_client.cfg  candy_server.cfg
src/cffi/: CMakeLists.txt
src/core/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cc
src/peer/: CMakeLists.txt
src/tun/: CMakeLists.txt
src/utility/: CMakeLists.txt
src/websocket/: CMakeLists.txt
