aux_source_directory(. DIR_LIB_SRCS)
add_library(core STATIC ${DIR_LIB_SRCS})

set_target_properties(core PROPERTIES CXX_STANDARD 20)

if (${CANDY_STATIC_FMT})
    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        target_link_libraries(core PRIVATE fmt)
    else()
        target_link_libraries(core PRIVATE fmt::fmt)
    endif()
else()
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(DEPS REQUIRED fmt)
    add_definitions(${DEPS_CFLAGS})
    include_directories(${DEPS_INCLUDEDIR})
    target_link_libraries(core PRIVATE ${DEPS_LIBRARIES})
endif()

if (${CANDY_STATIC_SPDLOG})
    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        target_link_libraries(core PRIVATE spdlog)
    else()
        target_link_libraries(core PRIVATE spdlog::spdlog)
    endif()
else()
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(DEPS REQUIRED spdlog)
    add_definitions(${DEPS_CFLAGS})
    include_directories(${DEPS_INCLUDEDIR})
    target_link_libraries(core PRIVATE ${DEPS_LIBRARIES})
endif()

if (${CANDY_STATIC_OPENSSL})
    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        target_link_libraries(core PRIVATE crypto ssl)
    else()
        target_link_libraries(core PRIVATE ${OPENSSL_LIB_CRYPTO} ${OPENSSL_LIB_SSL})
    endif()
    
endif()

if (${CANDY_STATIC_POCO})
    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        target_link_libraries(core PRIVATE PocoFoundation PocoNet PocoNetSSL)
    else()
        target_link_libraries(core PRIVATE Poco::Foundation Poco::Net Poco::NetSSL)
    endif()
endif()


target_link_libraries(core PRIVATE websocket)
target_link_libraries(core PRIVATE tun)
target_link_libraries(core PRIVATE peer)
