aux_source_directory(. DIR_LIB_SRCS)
add_library(utility STATIC ${DIR_LIB_SRCS})

set_target_properties(utility PROPERTIES CXX_STANDARD 20)

if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
    target_link_libraries(utility PRIVATE ws2_32)
endif()

if (${CANDY_STATIC_SPDLOG})
    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        target_link_libraries(utility PRIVATE spdlog)
    else()
        target_link_libraries(utility PRIVATE spdlog::spdlog)
    endif()
else()
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(DEPS REQUIRED spdlog)
    add_definitions(${DEPS_CFLAGS})
    include_directories(${DEPS_INCLUDEDIR})
    target_link_libraries(utility PRIVATE ${DEPS_LIBRARIES})
endif()

if (${CANDY_STATIC_POCO})
    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        target_link_libraries(utility PRIVATE PocoFoundation)
    else()
        target_link_libraries(utility PRIVATE Poco::Foundation)
    endif()
else()
    find_package(Poco REQUIRED Net)
    target_link_libraries(utility PRIVATE Poco::Foundation)
endif()
