aux_source_directory(. DIR_LIB_SRCS)
add_library(websocket STATIC ${DIR_LIB_SRCS})

set_target_properties(websocket PROPERTIES CXX_STANDARD 20)

if (${CANDY_STATIC_SPDLOG})
    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        target_link_libraries(websocket PRIVATE spdlog)
    else()
        target_link_libraries(websocket PRIVATE spdlog::spdlog)
    endif()
else()
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(DEPS REQUIRED spdlog)
    add_definitions(${DEPS_CFLAGS})
    include_directories(${DEPS_INCLUDEDIR})
    target_link_libraries(websocket PRIVATE ${DEPS_LIBRARIES})
endif()

if (${CANDY_STATIC_OPENSSL})
    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        target_link_libraries(websocket PRIVATE crypto ssl)
    else()
        target_link_libraries(websocket PRIVATE ${OPENSSL_LIB_CRYPTO} ${OPENSSL_LIB_SSL})
    endif()
endif()

if (${CANDY_STATIC_POCO})
    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
        target_link_libraries(websocket PRIVATE PocoFoundation PocoNet PocoNetSSL)
    else()
        target_link_libraries(websocket PRIVATE Poco::Foundation Poco::Net Poco::NetSSL)
    endif()
else()
    find_package(Poco REQUIRED COMPONENTS Foundation XML JSON Net NetSSL)
    target_link_libraries(websocket PRIVATE Poco::Foundation Poco::Net Poco::NetSSL)
endif()
